--- a/index.css
+++ b/index.css
@@ -2,12 +2,6 @@ body {
     background-color: black;
 }
 
-.teamCollage {
-    width: 100%;
-    background: url(IMG_4706.JPG);
-    background-size: cover;
-}
-
 .headerBlock {
     width: 100%;
     background: url(https://images.unsplash.com/photo-1503766587563-7cf366650cd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
@@ -34,17 +28,20 @@ body {
     color: rgb(21, 221, 21);
 }
 
-.baseballCard {
+.baseballWebCards {
     position: absolute;
-    padding-top: 25px;
+    padding-top: 15px;
     padding-left: 62%;
+    font-size: larger;
+    font-weight: 300;
+    color: rgb(25, 230, 25);
 }
 
 .playerPosition {
-    padding-left: 10%;
     position: absolute;
-    padding-top: 60px;
-    font-size: large;
+    padding-top: 70px;
+    padding-left: 62%;
+    font-size: medium;
     font-weight: 300;
     color: rgb(25, 230, 25);
 }
@@ -60,6 +57,12 @@ body {
     margin-top: 5px;
     margin-left: -17px;
     width: 10px;
+}
+
+.teamCollage {
+    width: 100%;
+    background: url(IMG_4706.JPG);
+    background-size: cover;
 }
 
 #first {
